Bug Fix
- Fixed bug that caused the footer to overlap on small viewports

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -32,7 +32,7 @@ p.small                                     { font-size: 11px; }
 .app-links.web                              { background-image: url(../assets/img/ic-web.png); }
 #home-video                                 { display: none; margin-top: 20px; }
 .tool-iframe                                { width: 100%; height: 650px; overflow: hidden; border: none; }
-.full-height                                { height: 100%; }
+.full-height                                { min-height: 100%; }
 .scrolloff                                  { pointer-events: none; }
 .bg-container                               { position: relative; }
 .bg-container .bg                           { background-color: #474747; position: absolute; left: 0; top: 0; bottom: 0; right: 75.9%; }
